RESOLVED FIXED 221595
[GPUP] Test media/track/audio-track-add-remove.html crashes on debug bots
https://bugs.webkit.org/show_bug.cgi?id=221595
Summary [GPUP] Test media/track/audio-track-add-remove.html crashes on debug bots
Peng Liu
Reported 2021-02-08 22:43:11 PST
[GPUP] Test media/track/audio-track-add-remove.html crashes on debug bots
Attachments
Patch (54.92 KB, patch)
2021-02-08 23:01 PST, Peng Liu
ews-feeder: commit-queue-
Patch (55.99 KB, patch)
2021-02-08 23:31 PST, Peng Liu
no flags
Patch (50.44 KB, patch)
2021-02-09 09:28 PST, Peng Liu
no flags
Revise the patch based on Eric's comment (50.44 KB, patch)
2021-02-09 09:36 PST, Peng Liu
no flags
Peng Liu
Comment 1 2021-02-08 23:01:04 PST
Peng Liu
Comment 2 2021-02-08 23:31:13 PST
Eric Carlson
Comment 3 2021-02-09 09:20:48 PST
Comment on attachment 419681 [details] Patch r=me As we discussed, the TestExpectations changes should be in a separate patch
Peng Liu
Comment 4 2021-02-09 09:28:56 PST
Peng Liu
Comment 5 2021-02-09 09:36:13 PST
Created attachment 419734 [details] Revise the patch based on Eric's comment
EWS
Comment 6 2021-02-09 12:21:13 PST
Committed r272600: <https://commits.webkit.org/r272600> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419734 [details].
Radar WebKit Bug Importer
Comment 7 2021-02-09 12:25:21 PST
Note You need to log in before you can comment on or make changes to this bug.