Source/WebKit/WebProcess/GPU/media/VideoTrackPrivateRemote.h
@@ -30,6 +30,7 @@
 
 #include "TrackPrivateRemoteConfiguration.h"
 #include "TrackPrivateRemoteIdentifier.h"
+#include <WebCore/MediaPlayerIdentifier.h>
 #include <WebCore/VideoTrackPrivate.h>
 
 namespace IPC {
@@ -45,9 +46,9 @@ class VideoTrackPrivateRemote
     : public WebCore::VideoTrackPrivate {
     WTF_MAKE_NONCOPYABLE(VideoTrackPrivateRemote)
 public:
-    static Ref<VideoTrackPrivateRemote> create(IPC::Connection& connection, TrackPrivateRemoteIdentifier idendifier, TrackPrivateRemoteConfiguration&& configuration)
+    static Ref<VideoTrackPrivateRemote> create(IPC::Connection& connection, WebCore::MediaPlayerIdentifier playerIdentifier, TrackPrivateRemoteIdentifier idendifier, TrackPrivateRemoteConfiguration&& configuration)
     {
-        return adoptRef(*new VideoTrackPrivateRemote(connection, idendifier, WTFMove(configuration)));
+        return adoptRef(*new VideoTrackPrivateRemote(connection, playerIdentifier, idendifier, WTFMove(configuration)));
     }
 
     void updateConfiguration(TrackPrivateRemoteConfiguration&&);
@@ -60,11 +61,12 @@ public:
     int trackIndex() const final { return m_trackIndex; }
 
 private:
-    VideoTrackPrivateRemote(IPC::Connection&, TrackPrivateRemoteIdentifier, TrackPrivateRemoteConfiguration&&);
+    VideoTrackPrivateRemote(IPC::Connection&, WebCore::MediaPlayerIdentifier, TrackPrivateRemoteIdentifier, TrackPrivateRemoteConfiguration&&);
 
     void setSelected(bool) final;
 
     IPC::Connection& m_connection;
+    WebCore::MediaPlayerIdentifier m_playerIdentifier;
     VideoTrackKind m_kind { None };
     AtomString m_id;
     AtomString m_label;
